--- a/src/forecast/prophet_analysis.ipynb
+++ b/src/forecast/prophet_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,11 @@
     "import math\n",
     "import numpy as np\n",
     "import scipy.stats as st\n",
-    "from sklearn.metrics import mean_squared_error\n",
     "from prophet import Prophet\n",
     "from influxdb_client import InfluxDBClient\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from statsmodels.tsa.stattools import adfuller\n",
-    "from sklearn.metrics import r2_score"
+    "from statsmodels.tsa.stattools import adfuller\n"
    ]
   },
   {
@@ -43,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,6 +85,7 @@
     "    expected_array = []\n",
     "    forecasted = []\n",
     "    expected = []\n",
+    "    \n",
     "    for start_time in start_times:\n",
     "        stop_time = datetime.datetime.strptime(start_time, \"%Y-%m-%dT%H:%M\")\n",
     "        stop_time = (stop_time + datetime.timedelta(days=interval)).strftime(\"%Y-%m-%dT%H:%M\")\n",
@@ -129,8 +128,14 @@
     "        \n",
     "        expected_array.append(metric['y'].tolist())\n",
     "        forecasted_array.append(metric['yhat'].tolist())\n",
+    "    \n",
+    "    \n",
+    "\n",
     "    forecasted = list(itertools.chain.from_iterable(forecasted_array))\n",
     "    expected = list(itertools.chain.from_iterable(expected_array))\n",
+    "\n",
+    "    \n",
+    "    \n",
     "\n",
     "# evaluate_field('temp')\n",
     "# print(mse_array)\n",
@@ -139,19 +144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "13:39:20 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "13:39:20 - cmdstanpy - INFO - Chain [1] done processing\n",
-      "13:39:24 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "13:39:24 - cmdstanpy - INFO - Chain [1] done processing\n",
-      "13:39:28 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "13:39:28 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "20:00:30 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "20:00:30 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "20:00:34 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "20:00:34 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "20:00:37 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "20:00:37 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -180,8 +185,8 @@
       "mse\n",
       "4.618764550866899\n",
       "Test RMSE: 2.149\n",
-      "r2 score result: 0.8691851410867807\n",
-      "Average Value:  19.550517206965974\n",
+      "MAE: 1.655737\n",
+      "Mean:  19.550517206965974\n",
       "Standard Deviation:  5.825656897931894\n",
       "Confidence intervals:  (19.126630362915453, 19.974404051016446)\n"
      ]
@@ -190,14 +195,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\barba\\AppData\\Local\\Temp\\ipykernel_5700\\383947025.py:45: DeprecationWarning: Use of keyword argument `alpha` for method `interval` is deprecated. Use first positional argument or keyword argument `confidence` instead.\n",
+      "C:\\Users\\barba\\AppData\\Local\\Temp\\ipykernel_5700\\2984125910.py:80: DeprecationWarning: Use of keyword argument `alpha` for method `interval` is deprecated. Use first positional argument or keyword argument `confidence` instead.\n",
       "  res = st.t.interval(alpha=0.95, df=len(forecasted)-1,\n",
-      "13:39:31 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "13:39:31 - cmdstanpy - INFO - Chain [1] done processing\n",
-      "13:39:35 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "13:39:35 - cmdstanpy - INFO - Chain [1] done processing\n",
-      "13:39:38 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "13:39:38 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "20:00:40 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "20:00:41 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "20:00:44 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "20:00:44 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "20:00:48 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "20:00:48 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -226,8 +231,8 @@
       "mse\n",
       "125.79501190588088\n",
       "Test RMSE: 11.216\n",
-      "r2 score result: 0.6166016483274881\n",
-      "Average Value:  39.3534297102452\n",
+      "MAE: 8.265723\n",
+      "Mean:  39.3534297102452\n",
       "Standard Deviation:  20.276734805341594\n",
       "Confidence intervals:  (37.878052551089745, 40.82880686940066)\n"
      ]
@@ -236,14 +241,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\barba\\AppData\\Local\\Temp\\ipykernel_5700\\383947025.py:45: DeprecationWarning: Use of keyword argument `alpha` for method `interval` is deprecated. Use first positional argument or keyword argument `confidence` instead.\n",
+      "C:\\Users\\barba\\AppData\\Local\\Temp\\ipykernel_5700\\2984125910.py:80: DeprecationWarning: Use of keyword argument `alpha` for method `interval` is deprecated. Use first positional argument or keyword argument `confidence` instead.\n",
       "  res = st.t.interval(alpha=0.95, df=len(forecasted)-1,\n",
-      "13:39:42 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "13:39:42 - cmdstanpy - INFO - Chain [1] done processing\n",
-      "13:39:46 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "13:39:46 - cmdstanpy - INFO - Chain [1] done processing\n",
-      "13:39:50 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "13:39:50 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "20:00:51 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "20:00:52 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "20:00:55 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "20:00:55 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "20:00:58 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "20:00:58 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -272,8 +277,8 @@
       "mse\n",
       "6.738890822035954\n",
       "Test RMSE: 2.596\n",
-      "r2 score result: 0.1326096583469265\n",
-      "Average Value:  11.173466703026662\n",
+      "MAE: 2.038048\n",
+      "Mean:  11.173466703026662\n",
       "Standard Deviation:  2.306147841298194\n",
       "Confidence intervals:  (11.005666616703571, 11.341266789349781)\n"
      ]
@@ -282,14 +287,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\barba\\AppData\\Local\\Temp\\ipykernel_5700\\383947025.py:45: DeprecationWarning: Use of keyword argument `alpha` for method `interval` is deprecated. Use first positional argument or keyword argument `confidence` instead.\n",
+      "C:\\Users\\barba\\AppData\\Local\\Temp\\ipykernel_5700\\2984125910.py:80: DeprecationWarning: Use of keyword argument `alpha` for method `interval` is deprecated. Use first positional argument or keyword argument `confidence` instead.\n",
       "  res = st.t.interval(alpha=0.95, df=len(forecasted)-1,\n",
-      "13:39:53 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "13:39:53 - cmdstanpy - INFO - Chain [1] done processing\n",
-      "13:39:56 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "13:39:56 - cmdstanpy - INFO - Chain [1] done processing\n",
-      "13:40:00 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "13:40:00 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "20:01:02 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "20:01:02 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "20:01:05 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "20:01:05 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "20:01:09 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "20:01:09 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -318,8 +323,8 @@
       "mse\n",
       "12.26986516109674\n",
       "Test RMSE: 3.503\n",
-      "r2 score result: 0.7327003415948194\n",
-      "Average Value:  70.45257248576851\n",
+      "MAE: 2.556086\n",
+      "Mean:  70.45257248576851\n",
       "Standard Deviation:  6.464037812054818\n",
       "Confidence intervals:  (69.9822357261582, 70.92290924537892)\n"
      ]
@@ -328,12 +333,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\barba\\AppData\\Local\\Temp\\ipykernel_5700\\383947025.py:45: DeprecationWarning: Use of keyword argument `alpha` for method `interval` is deprecated. Use first positional argument or keyword argument `confidence` instead.\n",
+      "C:\\Users\\barba\\AppData\\Local\\Temp\\ipykernel_5700\\2984125910.py:80: DeprecationWarning: Use of keyword argument `alpha` for method `interval` is deprecated. Use first positional argument or keyword argument `confidence` instead.\n",
       "  res = st.t.interval(alpha=0.95, df=len(forecasted)-1,\n"
      ]
     }
    ],
    "source": [
+    "APE = []\n",
+    "i = 0\n",
     "for field in fields:\n",
     "\tevaluate_field(field)\n",
     "\tprint(\"\\n\\nEvaluating \" + field)\n",
@@ -352,15 +359,50 @@
     "\n",
     "\n",
     "\n",
-    "\t# Coefficient of determination also called as R2 score is used to evaluate the performance of a linear regression model. \n",
-    "\t# It is the amount of the variation in the output dependent attribute which is predictable from the input independent variable(s). \n",
-    "\t# It is used to check how well-observed results are reproduced by the model, depending on the ratio of total deviation of results described by the model.\n",
-    "\t#The best possible score is 1 which is obtained when the predicted values are the same as the actual values\n",
-    "\t#R2 score of baseline model is 0.\n",
-    "\t#During the worse cases, R2 score can even be negative.\n",
+    "\t\n",
     "\n",
-    "\tr2 = r2_score(expected, forecasted)\n",
-    "\tprint('r2 score result:', r2)\n",
+    "\n",
+    "# MAPE\n",
+    "# The Mean Absolute Percentage Error (MAPE) is one of the most commonly used KPIs to measure forecast accuracy.\n",
+    "# MAPE is the sum of the individual absolute errors divided by the demand (each period separately). \n",
+    "# It is the average of the percentage errors.\n",
+    "# MAPE divides each error individually by the demand, so it is skewed: \n",
+    "# high errors during low-demand periods will significantly impact MAPE. \n",
+    "# Due to this, optimizing MAPE will result in a strange forecast that will most likely undershoot the demand.\n",
+    "\n",
+    "\t\n",
+    "\t#print(len(expected))\n",
+    "\t#print(expected[i])\n",
+    "\n",
+    "\t# for i in range(len(expected)):\n",
+    "\n",
+    "    #     # Calculate percentage error\n",
+    "\n",
+    "\t# \tprint(expected)\n",
+    "\t# \t#print(forecasted[i])\n",
+    "\t# \tper_err = (expected[i] - forecasted[i]) / expected[i]\n",
+    "\n",
+    "    #     # Take absolute value of the percentage error (APE)\n",
+    "\t# \tper_err = abs(per_err)\n",
+    "\n",
+    "    #     # Append it to the APE list\n",
+    "\t# \tAPE.append(per_err)\n",
+    "\n",
+    "\t\t\n",
+    "\n",
+    "# MAE\n",
+    "# The mean absolute error, or MAE, \n",
+    "# is calculated as the average of the forecast error values, \n",
+    "# where all of the forecast error values are forced to be positive.\n",
+    "# These error values are in the original units of the predicted values. \n",
+    "# A mean absolute error of zero indicates no error.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\t# Calculate the MAE\n",
+    "\tmae = mean_absolute_error(expected, forecasted)\n",
+    "\tprint('MAE: %f' % mae)\n",
     "\n",
     "\n",
     "\t# Un intervallo di confidenza è una tecnica di stima utilizzata nell'inferenza statistica che consente di limitare una coppia o più coppie di valori, \n",
@@ -370,11 +412,11 @@
     "\t# Questi valori limiteranno un intervallo all'interno del quale, con una certa probabilità, si troverà il parametro della popolazione.\n",
     "\n",
     "\n",
-    "\tavg = sum(forecasted) / len(forecasted) #media\n",
+    "\tmean = sum(forecasted) / len(forecasted) #media\n",
     "\tstd = np.std(forecasted)  #deviazione std\n",
     "\n",
     "\n",
-    "\tprint(\"Average Value: \",avg)\n",
+    "\tprint(\"Mean: \",mean)\n",
     "\tprint(\"Standard Deviation: \",std)\n",
     "\n",
     "\t# create 95% confidence interval\n",
