--- a/src/forecast/prophet_analysis.ipynb
+++ b/src/forecast/prophet_analysis.ipynb
@@ -400,7 +400,7 @@
     "\n",
     "\n",
     "\n",
-    "\t# Calculate the MAE\n",
+    "\t# Calculate the MAE 000\n",
     "\tmae = mean_absolute_error(expected, forecasted)\n",
     "\tprint('MAE: %f' % mae)\n",
     "\n",
