--- a/src/forecast/prophet_analysis.ipynb
+++ b/src/forecast/prophet_analysis.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Forecasting analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 312,
    "metadata": {},
@@ -30,6 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# Data extrapolation from Influx\n",
+    "\n",
     "INFLUXDB_HOST = os.getenv(\"INFLUX_HOST\", \"10.147.17.17\")\n",
     "INFLUXDB_PORT = os.getenv(\"INFLUXDB_PORT\", \"8086\")\n",
     "INFLUXDB_ORG = os.getenv(\"INFLUXDB_ORG\", \"lomo\")\n",
@@ -59,6 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Config with device id, the interval of time for the data used, evaluation start dates and the various field used \n",
     "\n",
     "device_id = '63206bf255cd6248f1a40184'\n",
     "\n",
@@ -73,6 +84,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "#With this function we obtain the forecasted data\n",
     "\n",
     "def evaluate_field(field):\n",
     "    global mse_array\n",
@@ -100,6 +113,9 @@
     "        # Convert the results to dataframe\n",
     "        df = result_to_dataframe(result)\n",
     "        df['ds'] = df['ds'].dt.tz_localize(None)\n",
+    "\n",
+    "        #train_size 80% - test_size 20%\n",
+    "\n",
     "        train, test = train_test_split(df, test_size=0.2, shuffle=False)\n",
     "        m = Prophet(\n",
     "            yearly_seasonality=False,\n",
@@ -357,66 +373,31 @@
     "\trmse = math.sqrt(mean_squared_error(expected, forecasted))\n",
     "\tprint('Test RMSE: %.3f'%rmse)\n",
     "\n",
-    "\n",
-    "\n",
     "\t\n",
+    "\t# MAE\n",
+    "\t# The mean absolute error, or MAE, \n",
+    "\t# is calculated as the average of the forecast error values, \n",
+    "\t# where all of the forecast error values are forced to be positive.\n",
+    "\t# These error values are in the original units of the predicted values. \n",
+    "\t# A mean absolute error of zero indicates no error.\n",
     "\n",
-    "\n",
-    "# MAPE\n",
-    "# The Mean Absolute Percentage Error (MAPE) is one of the most commonly used KPIs to measure forecast accuracy.\n",
-    "# MAPE is the sum of the individual absolute errors divided by the demand (each period separately). \n",
-    "# It is the average of the percentage errors.\n",
-    "# MAPE divides each error individually by the demand, so it is skewed: \n",
-    "# high errors during low-demand periods will significantly impact MAPE. \n",
-    "# Due to this, optimizing MAPE will result in a strange forecast that will most likely undershoot the demand.\n",
-    "\n",
-    "\t\n",
-    "\t#print(len(expected))\n",
-    "\t#print(expected[i])\n",
-    "\n",
-    "\t# for i in range(len(expected)):\n",
-    "\n",
-    "    #     # Calculate percentage error\n",
-    "\n",
-    "\t# \tprint(expected)\n",
-    "\t# \t#print(forecasted[i])\n",
-    "\t# \tper_err = (expected[i] - forecasted[i]) / expected[i]\n",
-    "\n",
-    "    #     # Take absolute value of the percentage error (APE)\n",
-    "\t# \tper_err = abs(per_err)\n",
-    "\n",
-    "    #     # Append it to the APE list\n",
-    "\t# \tAPE.append(per_err)\n",
-    "\n",
-    "\t\t\n",
-    "\n",
-    "# MAE\n",
-    "# The mean absolute error, or MAE, \n",
-    "# is calculated as the average of the forecast error values, \n",
-    "# where all of the forecast error values are forced to be positive.\n",
-    "# These error values are in the original units of the predicted values. \n",
-    "# A mean absolute error of zero indicates no error.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\t# Calculate the MAE 000\n",
+    "\t# Calculate the MAE \n",
     "\tmae = mean_absolute_error(expected, forecasted)\n",
     "\tprint('MAE: %f' % mae)\n",
     "\n",
     "\n",
-    "\t# Un intervallo di confidenza è una tecnica di stima utilizzata nell'inferenza statistica che consente di limitare una coppia o più coppie di valori, \n",
-    "\t# all'interno dei quali si troverà la stima puntuale desiderata (con una certa probabilità).\n",
+    "\t# A confidence interval is an estimation technique used in statistical inference to constrain a pair or pairs of values, \n",
+    "\t# within which the desired point estimate will be found (with a certain probability).\n",
     "\n",
-    "\t# Un intervallo di confidenza ci consentirà di calcolare due valori attorno a una media campionaria (uno superiore e uno inferiore). \n",
-    "\t# Questi valori limiteranno un intervallo all'interno del quale, con una certa probabilità, si troverà il parametro della popolazione.\n",
-    "\n",
-    "\n",
-    "\tmean = sum(forecasted) / len(forecasted) #media\n",
-    "\tstd = np.std(forecasted)  #deviazione std\n",
+    "\t# A confidence interval will allow us to calculate two values around a sample mean (one upper and one lower). \n",
+    "\t# These values will bound an interval within which, with some probability, the population parameter will be found.\n",
     "\n",
     "\n",
+    "\tmean = sum(forecasted) / len(forecasted) #mean\n",
     "\tprint(\"Mean: \",mean)\n",
+    "\n",
+    "\n",
+    "\tstd = np.std(forecasted)  # standard deviation\n",
     "\tprint(\"Standard Deviation: \",std)\n",
     "\n",
     "\t# create 95% confidence interval\n",
