--- a/src/forecast/prophet_analysis.ipynb
+++ b/src/forecast/prophet_analysis.ipynb
@@ -366,7 +366,7 @@
     "\tplt.legend(loc=\"upper left\")\n",
     "\tplt.show()\n",
     "\n",
-    "\t#calcolo Mean Square Error e Root Square Error ritenuto più preciso, vedere bene diff\n",
+    "\t#Mean Square Error & Root Square Error considered more accurate \n",
     "\tmse = mean_squared_error(expected, forecasted)\n",
     "\tprint('mse')\n",
     "\tprint(mse) #mah\n",
